--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,20 +11,30 @@ nav:
   - User Guide:
     - Overview: user_guide/overview.md
     - Datasets:
-    - General: user_guide/datasets_general.md
-    - MMS: user_guide/datasets_mms.md
+      - General: user_guide/datasets_general.md
+      - MMS: user_guide/datasets_mms.md
     - Dataset Creator : user_guide/dataset_creator.md
     - Examples : user_guide/examples.md
+  - API: reference/
 
 theme:
   name: mkdocs
 
 markdown_extensions:
   - footnotes
+watch:
+  - docs
+  - spacephyml
+  - scripts
 
 plugins:
   - search
   - autorefs
+  - gen-files:
+      scripts:
+        - scripts/gen_ref_pages.py
+  - literate-nav:
+      nav_file: SUMMARY.md
   - mkdocstrings:
       handlers:
         python:
@@ -32,5 +42,10 @@ plugins:
             members_order: source
             show_source: false
             show_signature_annotations: true
-            show_root_heading: true
-            heading_level: 3
+            show_root_heading: false
+            parameter_headigs: true
+            heading_level: 2
+            show_symbol_type_heading: true
+            show_symbol_type_toc: true
+            separate_signature: true
+            filters: ["!^_", "^__init__$"]
