--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,11 @@
 site_name: SpacePhyML
-site_url: https://jonah-e.github.io/SpacePhyML/
+site_url: https://asap-space.github.io/SpacePhyML/
 site_author: Jonah Ekelund
 site_description: SpacePhyML Documentation
-copyright: Copyright &copy; 2024 Jonah Ekelund
+copyright: Copyright &copy; 2025 Automatics in Space Exploration (ASAP)
 
-repo_url: https://github.com/Jonah-E/SpacePhyML
+
+repo_url: https://github.com/asap-space/SpacePhyML
 
 nav:
   - Home: index.md
